🩹 v0.2.1 - Change logo - Increase spacing between refresh and save - Fix footer non-sticky on some browser - Add refresh button - Regenerate "supplements" on each refresh - Falafel option - new menu

--- a/public/global.css
+++ b/public/global.css
@@ -10,5 +10,5 @@
 }
 
 html,body{
-	min-height: 100%;
+	height: 100%;
 }
