--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,11 +1,4 @@
-﻿@import url("/fonts/Product Sans Regular.ttf");
-@font-face {
-    font-family: 'Product Sans';
-    src: url("/fonts/product-sans/Product_Sans_Regular.ttf") format('truetype');
-}
-
-$primary: #EB603F;
+﻿$primary: #EB603F;
 $soft: rgba($primary, 0.14);
 $white: white;
 
-$mainFont : 'Product Sans', sans-serif;
